[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }

[dev-dependencies]

# Test helpers (LiteSVM and token helpers)
litesvm = "0.12.0"
litesvm-token = "0.12.0"
solana-message = "3.1.0"
solana-transaction = "3.1.0"
solana-signer = "3.0.0"
solana-keypair = "3.1.2"
solana-pubkey = "3.0.0"


